--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,16 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
 
 img {
   max-width: 100%;
+}
+
+main{
+  margin: auto;
+  max-width: 800px;
 }
 
 .shadow{
@@ -17,4 +23,11 @@ img {
 
 .shadow:hover{
   box-shadow: 0 0.5rem 1rem 1px rgba(3, 3, 3, 0.3);
+}
+
+.super-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
