--- a/src/assets/css/Pagination.css
+++ b/src/assets/css/Pagination.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  margin: 1rem auto;
 }
 
 .page-no{
@@ -16,6 +17,7 @@
   border-radius: 9999px;
   color: #333;
   transition: all 150ms ease;
+  cursor: pointer;
 }
 
 .page-no:hover, .page-active{
